--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
 						<div class="header-text">
 							<h2> <span>Tzach Cohen website.</span>   </h2>
 							<p><h2>QA Engineer Web & Mobile</h2> </p>
-							<a href="C:\Users\tzachc\Desktop\QAצח לימודים\html\‏‏תיקיה חדשה\HTML---New-Web-main\קורות חיים.pdf"
+							<a href="C:\Users\tzachc\Desktop\QAצח לימודים\html\‏‏תיקיה חדשה\HTML---New-Web-main\קורות חיים בעברית.pdf"
 							target="_blank">My CV in Hebrew</a>
-							<a href="resume/צח כהן-קורות חיים QA.doc" download>My CV in English</a>
+							<a href="C:\Users\tzachc\Desktop\QAצח לימודים\html\‏‏תיקיה חדשה\HTML---New-Web-main\קורות חיים באנגלית.pdf"
+							target="_blank">My CV in English</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
